<resources>
    <string name="app_name">Smart Study</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="account_login">Account Login</string>
    <string name="user_name">Mobile No</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="credits">Created and Developed By Mimoh Kulkarni</string>
    <string name="tvregister"><u>Not yet registered? Register here</u></string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="medium">
        <item>Select Medium</item>
        <item>English</item>
        <item>Semi-English</item>
        <item>Marathi</item>
    </string-array>
    <string-array name="select_test">
        <item>All</item>
        <item>Test</item>
        <item>Quiz</item>
    </string-array>
    <string-array name="select_period">
        <item>Last 1 Month</item>
        <item>Last 2 Months</item>
        <item>Last 3 Months</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="relogin">Already member? Click here to login</string>
    <string name="menu">Menu</string>
    <string name="remember_me">Remember Me</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="batch_no">Enter batch name</string>
    <string name="class_name">Enter Standard/Class</string>
    <string name="full_name">Enter full name</string>
    <string name="roll_no">Enter roll no</string>
    <string name="email">Enter email address</string>
    <string name="enter_address">Enter address</string>
    <string name="bdate">Touch to select birthdate</string>
    <string name="account_signup">Account Signup</string>
    <string name="personal_info">My Profile</string>
    <string name="quiz">Quiz</string>
    <string name="important_notes">Important Notes</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="kulkarni_classes">Welcome to Kulkarni Classes</string>
    <string name="quiz_menu">Quiz Menu</string>
    <string name="imp_notes">Important Notes</string>
    <string name="imp_video">Important Videos</string>
    <string name="question"><b>Question :</b></string>
    <string name="ans_correct"><b>Correct Answer :</b></string>
    <string name="ans_given"><b>Given Answer :</b></string>
    <string name="account_details">Account Details</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="change">CHANGE</string>
    <string name="done">Done</string>
    <string name="personal_information">Personal Information :</string>
    <string name="tution_information">Tution Information :</string>
    <string name="previous">Previous</string>
    <string name="videos_lectures">Videos Lectures</string>
    <string name="details"><u>Details</u></string>
    <string name="test_subject">Test Subject</string>
    <string name="marks">Marks</string>
    <string name="test_name">Test Name</string>
    <string name="test_time">Test Time</string>
    <string name="test_chapters">Test Chapters</string>
    <string name="test_result_details">Test Result Details</string>
    <string name="nothing_to_show">Nothing To Show</string>
    <string name="otp_message">Sit back and relax! We will auto-detect OTP.
        If we fail to detect please enter the OTP</string>
    <string name="standard">Standard</string>
    <string name="batch_name">Batch name</string>
    <string name="roll_number">Roll Number</string>
    <string name="birthdate">Birthdate</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="abcde">AES</string>
    <string name="abcd">AES</string>
</resources>
