<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETusername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:hint="@string/user_name"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:singleLine="true"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.5"
                android:singleLine="true"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/TVforgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="#000000" />

        <Switch
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:background="#d67601"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TVregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tvregister"
            android:textColor="#B22222"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingTop="15dp"
            android:text="@string/credits"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>