<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETregisterusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:hint="@string/user_name"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETpasswordfirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.5"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETpasswordsecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock"
                android:hint="@string/reenter_password"
                android:inputType="textPassword"
                android:letterSpacing="0.5"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/TVpersonal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:textSize="25sp"
            android:text="@string/personal_information"
            android:layout_marginStart="10dp"
            android:elevation="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETfullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:hint="@string/full_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETbdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/bdate"
                android:hint="@string/bdate"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:textColor="#000000"
                tools:ignore="KeyboardInaccessibleWidget" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gender"
                android:paddingStart="50dp"
                android:paddingEnd="5dp"
                android:entries="@array/gender" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/address"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/TVtution_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:textSize="25sp"
            android:text="@string/tution_information"
            android:layout_marginStart="10dp"
            android:elevation="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETclass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/class_name"
                android:hint="@string/class_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETbatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/batch_no"
                android:hint="@string/batch_no"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_institute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gender"
                android:paddingStart="50dp"
                android:paddingEnd="5dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gender"
                android:paddingStart="50dp"
                android:paddingEnd="5dp"
                android:entries="@array/medium" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETroll_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/roll_no"
                android:hint="@string/roll_no"
                android:inputType="text"
                android:letterSpacing="0.5"
                android:singleLine="true"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:background="#d67601"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TVlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/relogin"
            android:textColor="#B22222"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/TVcredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingTop="15dp"
            android:text="@string/credits"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    </ScrollView>

</FrameLayout>