<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_result_details"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:text="@string/test_subject"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:text="@string/test_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:text="@string/marks"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:id="@+id/TVresult_subject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/TVresult_testname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/TVresult_marks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:text="@string/test_time"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:text="@string/test_chapters"
            android:textColor="#000000"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="0dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/TVresult_testtime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/TVresult_testchapters"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/result_textbox_border"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>